fractional tick based entity TPS limiter

--- a/Tiquality.cfg
+++ b/Tiquality.cfg
@@ -128,6 +128,10 @@ tiquality {
         # Blocks you never want to tick are defined here. Useful for stopping dupes or game breaking lag without banning recipes!
         S:TICK_DENIED_BLOCKS <
          >
+
+        # Use this array to assign a custom target TPS. The block will never attempt to tick faster than the provided maximum.
+        S:TICK_LIMITED_BLOCKS <
+         >
     }
 
     ##########################################################################################################
@@ -153,8 +157,9 @@ tiquality {
         # Entities you never want to tick are defined here. Useful for stopping dupes or game breaking lag without banning recipes!
         S:TICK_DENIED_ENTITIES <
          >
+
+        # Use this array to assign a custom target TPS. The entity will never attempt to tick faster than the provided maximum.
+        S:TICK_LIMITED_ENTITIES <
+         >
     }
-
 }
-
-
